<?xml version="1.0" encoding="utf-8"?>

<!--
 Programmer:  Greg Savidge
 Class     :  CS211D
 Date      :  July 17, 2013
 Instructor:  Abbas Moghtanei
 File Name :  strings.xml
 
 Purpose:
 
 This is the resource for my Strings.
 
 -->
<resources>

    <string name="app_name">StatesCapitalQuiz</string>
    <string name="action_settings">Settings</string>
    <string name="app_title">States/Capital Quiz</string>
    <string name="highscores">High Score Table</string>
    <string name="name_hint">Enter Your Name:</string>
    <string name="btn_newgame">New Game</string>
    <string name="btn_showscores">Show Scores</string>
    <string name="answer_hint">type answer here:</string>
    <string name="btn_submit">Submit Answer</string>
    <string name="btn_play_again">Play Again?</string>

</resources>
