<!--
 Programmer:  Greg Savidge
 Class     :  CS211D
 Date      :  July 17, 2013
 Instructor:  Abbas Moghtanei
 File Name :  activity_geo_quiz.xml
 
 Purpose:
 
 This xml file specifies the formatting, and layout for the layout of Laucher 
 Activity.  The image that is loaded is placed in res/drawable-mdpi/quiz_logo.
 png
 
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GeoQuiz" >

        <TextView 
           android:id="@+id/app_title"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:gravity="center_horizontal|center_vertical"
           android:background="@color/blue"
           android:text="@string/app_title"
           android:textColor="@color/red"
           android:textSize="@dimen/text_large"
            
           android:drawableRight="@drawable/quiz_logo" 
           />
         <EditText
            android:id="@+id/name"
            android:inputType="text"
            android:hint="@string/name_hint"
            android:maxLength="18"
            android:layout_marginTop="150dp"
            android:layout_width="200dp"
            android:layout_height="wrap_content" 
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            />
         
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
          
            <Button android:id="@+id/new_game"
             android:onClick="buttonHandler"
             android:layout_marginTop="150dp"
             android:layout_marginLeft="155dp"
             android:layout_width="107dp"
             android:layout_height="wrap_content"
             android:text="@string/btn_newgame"
             />
          
            <Button android:id="@+id/show_scores"
             android:onClick="buttonHandler"
             android:layout_marginTop="150dp"
             android:layout_marginLeft="95dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/btn_showscores"
             />
          </LinearLayout>
          
</LinearLayout>
