<?xml version="1.0" encoding="utf-8"?>

<!--
 Programmer:  Greg Savidge
 Class     :  CS211D
 Date      :  July 17, 2013
 Instructor:  Abbas Moghtanei
 File Name :  activity_new_game.xml
 
 Purpose:
 
 This is the layout for my Activity NewGame.
 -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NewGame" 
     >
    
         <TextView 
           android:id="@+id/app_title"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:gravity="center_horizontal|center_vertical"
           android:background="@color/blue"
           android:text="@string/app_title"
           android:textColor="@color/red"
           android:textSize="@dimen/text_large"
            
           android:drawableRight="@drawable/quiz_logo" 
            />
         
           <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
         
         
             <TextView 
                android:id="@+id/question"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="250dp"
                android:layout_marginLeft="60dp"
                android:textSize="@dimen/text_medium"
                />
             
              <EditText
                android:id="@+id/answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="250dp"
                android:layout_marginLeft="25dp"
                android:singleLine="true"
                android:hint="@string/answer_hint"
                />
            </LinearLayout>
            
          <Button
              android:id="@+id/submitAnswer"
              android:onClick="getAnswer"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="@dimen/text_large"
              android:layout_gravity="center_horizontal"
              android:text="@string/btn_submit"
              />
</LinearLayout>
